# python-tutor-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  chainlit.md  fly.toml  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci.yml
app/: agent.py  config.py  main.py  tools.py
app/ai/: client.py
app/core/: exceptions.py  logging.py
app/prompts/: tutor.py
docs/: PRD.md
docs/adr/: 001-chainlit-over-streamlit.md  002-openrouter-unified-llm-gateway.md  003-claude-haiku-default-model.md  004-flyio-over-huggingface-spaces.md  005-create_agent-over-lcel-runnable.md  006-grounding-via-tavily-search.md  README.md
docs/diagrams/: conversation-flow.md
tests/: test_agent.py  test_prompts.py  test_smoke.py  test_tools.py
